# thousand_simulator

./: .gitignore  Cargo.toml  flake.nix
core/: Cargo.toml
core/src/: ability.rs  attribute.rs  card.rs  character.rs  color.rs  group.rs  lib.rs  role.rs  set.rs
core/src/sets/: README.md  mod.rs
core/src/sets/op11/: character.rs  leader.rs  mod.rs
macros/: Cargo.toml
macros/src/: character.rs  event.rs  leader.rs  lib.rs  stage.rs
